--- a/pom.xml
+++ b/pom.xml
@@ -41,26 +41,25 @@
         <dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.21</version>
+			<version>1.7.25</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.github.jsqlparser</groupId>
 			<artifactId>jsqlparser</artifactId>
-			<version>1.0</version>
+			<version>1.1</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>3.2.14.RELEASE</version>
+			<version>4.3.10.RELEASE</version>
 			<scope>provided</scope>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
-			<version>3.2.14.RELEASE</version>
+			<version>4.3.10.RELEASE</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -68,7 +67,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>3.2.14.RELEASE</version>
+			<version>4.3.10.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -77,18 +76,20 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.41</version>
+			<version>5.1.43</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid</artifactId>
-			<version>1.0.29</version>
-			<scope>test</scope>
+		    <groupId>com.zaxxer</groupId>
+		    <artifactId>HikariCP-java6</artifactId>
+		    <version>2.3.13</version>
+		    <scope>test</scope>
 		</dependency>
+
         <!-- logback -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -102,6 +103,7 @@
 			<version>1.1.3</version>
 			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>
 
 	<build>
