--- a/pom.xml
+++ b/pom.xml
@@ -84,9 +84,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>com.zaxxer</groupId>
-		    <artifactId>HikariCP-java6</artifactId>
-		    <version>2.3.13</version>
+		    <groupId>org.apache.tomcat</groupId>
+		    <artifactId>tomcat-jdbc</artifactId>
+		    <version>8.5.20</version>
 		    <scope>test</scope>
 		</dependency>
 
