--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.pugwoo</groupId>
 	<artifactId>nimble-orm</artifactId>
-	<version>0.6.4</version>
+	<version>0.7.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>nimble-orm</name>
@@ -49,6 +49,13 @@
 			<artifactId>jsqlparser</artifactId>
 			<version>1.1</version>
 		</dependency>
+		<!-- json -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.5</version>
+		</dependency>
+		
 		
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -103,20 +110,7 @@
 			<version>1.1.3</version>
 			<scope>test</scope>
 		</dependency>
-		
-		<!-- json for test -->
-		<dependency>
-			<groupId>com.pugwoo</groupId>
-			<artifactId>woo-utils</artifactId>
-			<version>0.1.17</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.0</version>
-			<scope>test</scope>
-		</dependency>
+
 	</dependencies>
 
 	<build>
