--- a/src/test/resources/jdbc.properties
+++ b/src/test/resources/jdbc.properties
@@ -2,4 +2,4 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 # reconnect setting
 jdbc.url=jdbc:mysql://localhost:3306/nimbleorm?autoReconnect=true&autoReconnectForPools=true&interactiveClient=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
-jdbc.password=root
+jdbc.password=
