配置 serverTimezone=CTT

--- a/src/test/resources/jdbc.properties
+++ b/src/test/resources/jdbc.properties
@@ -13,6 +13,6 @@ jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 #          + useSSL=false        需显示关闭ssl
 #          + serverTimezone=CTT  时区，CTT上海(设现在 22:00)，设置为UTC时间会偏差8个小时(14:00)
 jdbc.url=jdbc:mysql://192.168.0.101:3306/nimbleorm?autoReconnect=true&autoReconnectForPools=true&interactiveClient\
-  =true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=UTC
+  =true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
 jdbc.username=dev
 jdbc.password=devdev
