pom mysql-connector-java 5.1.46

--- a/src/test/resources/jdbc.properties
+++ b/src/test/resources/jdbc.properties
@@ -1,18 +1,5 @@
-## before mysql 8.x
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#
-## reconnect setting
-#jdbc.url=jdbc:mysql://192.168.0.101:3306/nimbleorm?autoReconnect=true&autoReconnectForPools=true&interactiveClient=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#jdbc.username=dev
-#jdbc.password=devdev
-
-
-# mysql 8.0.11 DriverClass
-jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-# 8.0.11 :   zeroDateTimeBehavior=CONVERT_TO_NULL (原: convertToNull)
-#          + useSSL=false        需显示关闭ssl
-#          + serverTimezone=CTT  时区，CTT上海(设现在 22:00)，设置为UTC时间会偏差8个小时(14:00)
-jdbc.url=jdbc:mysql://192.168.0.101:3306/nimbleorm?autoReconnect=true&autoReconnectForPools=true&interactiveClient\
-  =true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
+jdbc.driverClassName=com.mysql.jdbc.Driver
+# reconnect setting
+jdbc.url=jdbc:mysql://192.168.0.101:3306/nimbleorm?autoReconnect=true&autoReconnectForPools=true&interactiveClient=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc.username=dev
 jdbc.password=devdev
