--- a/src/test/resources/jdbc.properties
+++ b/src/test/resources/jdbc.properties
@@ -1,5 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-# reconnect setting
-jdbc.url=jdbc:mysql://192.168.0.101:3306/nimbleorm?autoReconnect=true&autoReconnectForPools=true&interactiveClient=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://192.168.0.101:3306/nimbleorm
 jdbc.username=dev
 jdbc.password=devdev
