--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,14 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.9.8</version>
 		</dependency>
-		
-		
+		<!-- mvel -->
+		<dependency>
+			<groupId>org.mvel</groupId>
+			<artifactId>mvel2</artifactId>
+			<version>2.4.4.Final</version>
+		</dependency>
+
+		<!-- external provided -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
