--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.26</version>
+			<version>1.7.28</version>
 		</dependency>
         <!-- SQL parser -->
 		<dependency>
@@ -54,7 +54,7 @@
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
-		    <version>2.9.9.2</version>
+		    <version>2.9.9.3</version>
 		</dependency>
 		<!-- mvel -->
 		<dependency>
@@ -108,6 +108,7 @@
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 			<version>3.3.1</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
