--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,13 @@
 			<!--<version>5.1.48</version>-->
 			<scope>test</scope>
 		</dependency>
+		<!-- clickhouse driver official-->
+		<dependency>
+			<groupId>ru.yandex.clickhouse</groupId>
+			<artifactId>clickhouse-jdbc</artifactId>
+			<version>0.3.2</version>
+			<scope>test</scope>
+		</dependency>
 		<!--<dependency>
 		    <groupId>org.apache.tomcat</groupId>
 		    <artifactId>tomcat-jdbc</artifactId>
