--- a/src/test/resources/jdbc.properties
+++ b/src/test/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.0.111:3306/nimbleorm?rewriteBatchedStatements=TRUE
-jdbc.username=dev
-jdbc.password=devdev
+jdbc.driverClassName=ru.yandex.clickhouse.ClickHouseDriver
+jdbc.url=jdbc:clickhouse://9.135.116.79:30812/nimbleorm
+jdbc.username=root
+jdbc.password=a123456
