--- a/nimble-orm-test-mysql/pom.xml
+++ b/nimble-orm-test-mysql/pom.xml
@@ -6,8 +6,8 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 
-		<!-- 最低支持的版本是2.2.0.RELEASE 最高不限；所以这里测试最低和最高都需要各侧一次-->
-		<version>2.2.0.RELEASE</version>
+		<!-- 最低支持的版本是2.2.0.RELEASE 最高不限；所以这里测试最低和最高都需要各测一次-->
+		<version>2.4.0</version>
 
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
@@ -20,16 +20,15 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-aop</artifactId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.pugwoo</groupId>
 			<artifactId>nimble-orm</artifactId>
@@ -39,7 +38,7 @@
 		<dependency>
 			<groupId>com.pugwoo</groupId>
 			<artifactId>woo-utils</artifactId>
-			<version>1.1.1</version>
+			<version>1.1.6</version>
 		</dependency>
 
 		<dependency>
