--- a/nimble-orm-test-mysql/pom.xml
+++ b/nimble-orm-test-mysql/pom.xml
@@ -30,6 +30,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>ru.yandex.clickhouse</groupId>
+			<artifactId>clickhouse-jdbc</artifactId>
+			<version>0.3.2</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.pugwoo</groupId>
 			<artifactId>nimble-orm</artifactId>
 			<version>1.3.7</version>
