--- a/nimble-orm-test/src/main/resources/application-mysql.yaml
+++ b/nimble-orm-test/src/main/resources/application-mysql.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.0.111:3306/nimbleorm?rewriteBatchedStatements=TRUE&useCursorFetch=true
+    url: jdbc:mysql://192.168.0.111:3306/nimbleorm?useCursorFetch=true
     username: dev
     password: devdev
     driver-class-name: com.mysql.cj.jdbc.Driver
