完善clickhouse单元测试

--- a/nimble-orm-test/src/main/resources/application-clickhouse.yaml
+++ b/nimble-orm-test/src/main/resources/application-clickhouse.yaml
@@ -3,4 +3,4 @@ spring:
     url: jdbc:clickhouse://192.168.0.111:8123/nimbleorm
     username: root
     password: 123456
-    driver-class-name: ru.yandex.clickhouse.ClickHouseDriver
+    driver-class-name: com.clickhouse.jdbc.ClickHouseDriver
