--- a/nimble-orm-test/pom.xml
+++ b/nimble-orm-test/pom.xml
@@ -30,9 +30,9 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>ru.yandex.clickhouse</groupId>
+			<groupId>com.clickhouse</groupId>
 			<artifactId>clickhouse-jdbc</artifactId>
-			<version>0.3.2</version>
+			<version>0.3.2-patch11</version>
 		</dependency>
 
 		<dependency>
