--- a/nimble-orm-test/pom.xml
+++ b/nimble-orm-test/pom.xml
@@ -34,11 +34,17 @@
 			<artifactId>clickhouse-jdbc</artifactId>
 			<version>0.5.0</version>
 		</dependency>
-		<!-- clickhosue-jdbc 0.4.6 默认使用lz4压缩，所以需要引入lz4-java包 -->
+		<!-- clickhosue-jdbc 0.4.6+ 默认使用lz4压缩，所以需要引入lz4-java包 -->
 		<dependency>
 			<groupId>org.lz4</groupId>
 			<artifactId>lz4-java</artifactId>
 			<version>1.8.0</version>
+		</dependency>
+		<!-- clickhouse优先用这个 -->
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.2.1</version>
 		</dependency>
 
 		<dependency>
