--- a/nimble-orm-test/pom.xml
+++ b/nimble-orm-test/pom.xml
@@ -48,6 +48,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.pugwoo</groupId>
 			<artifactId>nimble-orm</artifactId>
 			<version>1.5.7</version>
