--- a/nimble-orm-test/src/main/resources/application.yaml
+++ b/nimble-orm-test/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ spring:
       password: 123456
       driver-class-name: com.clickhouse.jdbc.ClickHouseDriver
     postgresql:
-      jdbc-url: jdbc:postgresql://192.168.0.120:5432/postgres?currentSchema=nimbleorm
+      jdbc-url: jdbc:postgresql://192.168.0.120:5432/postgres?stringtype=unspecified&currentSchema=nimbleorm
       username: postgres
       password: homeserver
       driver-class-name: org.postgresql.Driver
