--- a/nimble-orm-test/pom.xml
+++ b/nimble-orm-test/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>com.clickhouse</groupId>
 			<artifactId>clickhouse-jdbc</artifactId>
-			<version>0.5.0</version>
+			<version>0.6.0-patch4</version>
 		</dependency>
 		<!-- clickhosue-jdbc 0.4.6+ 默认使用lz4压缩，所以需要引入lz4-java包 -->
 		<dependency>
@@ -44,31 +44,31 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents.client5</groupId>
 			<artifactId>httpclient5</artifactId>
-			<version>5.2.1</version>
+			<version>5.3.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.7.0</version>
+			<version>42.7.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.pugwoo</groupId>
 			<artifactId>nimble-orm</artifactId>
-			<version>1.6.3</version>
+			<version>1.6.4</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.pugwoo</groupId>
 			<artifactId>woo-utils</artifactId>
-			<version>1.2.4</version>
+			<version>1.3.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.30</version>
+			<version>1.18.32</version>
 		</dependency>
 
 		<dependency>
