--- a/nimble-orm-test/pom.xml
+++ b/nimble-orm-test/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>com.clickhouse</groupId>
 			<artifactId>clickhouse-jdbc</artifactId>
-			<version>0.6.0-patch4</version>
+			<version>0.6.5</version>
 		</dependency>
 		<!-- clickhosue-jdbc 0.4.6+ 默认使用lz4压缩，所以需要引入lz4-java包 -->
 		<dependency>
